--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
+    "start": "NODE_ENV=production node server",
     "server": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -20,8 +21,11 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
+    "morgan": "^1.9.1",
+    "node-geocoder": "^3.25.0",
     "prettier": "^1.19.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "slugify": "^1.3.6"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
