refactored product reviews on backend. All routes should be v1 with controllers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-unused-vars": "warn",
     "no-process-env": "off",
     "no-undef": "off",
-    "require-atomic-updates": "off"
+    "require-atomic-updates": "off",
+    "no-useless-escape": "warn"
   }
 }
