--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node server",
-    "server": "nodemon server"
+    "server": "set NODE_ENV=development && nodemon server"
   },
   "author": "",
   "license": "ISC",
