--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "helmet": "^3.21.2",
     "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "node-geocoder": "^3.25.0",
     "nodemailer": "^6.3.1",
+    "objects-to-csv": "^1.3.6",
     "request": "^2.88.0",
-    "slugify": "^1.3.6",
+    "slugify": "^1.4.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
